force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/CQ_NN_SQX_Restaurant__c.object-meta.xml
<CustomObject>
    <label>Restaurant</label>
    <nameField>
        <label>Restaurant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restaurants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>