force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/CQ_NN_Child_Record__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Child_Record__c</fullName>
    <label>Child Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>