force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/CQ_NN_Cuisine_Type__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Cuisine_Type__c</fullName>
    <label>Cuisine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>