force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/CQ_NN_Description__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>