force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/CQ_NN_Meal_Types_Served__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Meal_Types_Served__c</fullName>
    <label>Meal Types Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Late Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>