force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/CQ_NN_SQX_Part__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_SQX_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>compliancequest__SQX_Part__c</referenceTo>
    <relationshipLabel>Restaurants</relationshipLabel>
    <relationshipName>Restaurants</relationshipName>
    <type>Lookup</type>
</CustomField>