force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/CQ_NN_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Target_Date__c</fullName>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>