force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/CQ_NN_Upload_File__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Upload_File__c</fullName>
    <label>Upload File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>