force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/fields/SQ_NN_Title__c.field-meta.xml
<CustomField>
    <fullName>SQ_NN_Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>