force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/validationRules/CQ_NN_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CQ_NN_Date</fullName>
    <active>true</active>
    <description>Validation rule for date in which Initiated Date should not be equal to or greater than Target Date.</description>
    <errorConditionFormula>CQ_NN_Initiated_Date__c &gt;=  CQ_NN_Target_Date__c</errorConditionFormula>
    <errorMessage>Initiated date should be less than target date</errorMessage>
</ValidationRule>