force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/validationRules/Initiated_Date_Less_Than_Target_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Initiated_Date_Less_Than_Target_Date</fullName>
    <active>true</active>
    <errorConditionFormula>CQ_NN_Initiated_Date__c &gt;=  CQ_NN_Target_Date__c</errorConditionFormula>
    <errorMessage>Initiated date should be less than target date</errorMessage>
</ValidationRule>