force-app/main/default/objects/CQ_NN_SQX_Restaurant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CQ_NN_Cuisine_Type__c</columns>
    <columns>CQ_NN_Meal_Types_Served__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>